fixed responsiveness, centered the app on the viewport and fixed small fonts on smaller devices

--- a/style.css
+++ b/style.css
@@ -3,13 +3,20 @@ body {
   font-family: 'Overlock', cursive;
   font-size: 16px;
   line-height: 1.7;
-  display: grid;
-  height: 100%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  height: 100vh;
+  width: 100vw;
+  padding: 50px;
+  overflow-x: hidden;
 }
 *,
 *::before,
 *::after {
   box-sizing: border-box;
+  padding: 0;
+  margin: 0;
 }
 
 .bmi-app {
@@ -19,7 +26,6 @@ body {
     rgba(5, 238, 25, 0.7)
   );
   border-radius: 20px;
-  margin: 10vh auto;
   padding: 20px;
   max-width: 960px;
 }
@@ -95,6 +101,7 @@ button {
   padding: 10px;
   border-radius: 10px;
   outline: 0;
+  font-family: inherit;
   border: none;
   background: rgba(40, 80, 80, 0.4);
   color: white;
@@ -110,7 +117,7 @@ button {
   padding-bottom: 10px;
   padding-left: 40px;
   font-size: 15px;
-  font-size: calc(0.7vw + 9px);
+  font-size: calc(0.5vw + 12px);
   color: #fff;
   margin-top: 20px;
 }
@@ -154,7 +161,7 @@ button {
   padding: 18px 10px;
   border-bottom-right-radius: 25px;
   border-bottom-left-radius: 25px;
-  font-size: calc(2vw + 7px);
+  font-size: calc(1.4vw + 13px);
   box-shadow: 0px 7px 14px -4px rgba(0, 0, 0, 0.75);
 }
 
@@ -174,6 +181,9 @@ button {
 /* MEDIA QUERY */
 
 @media (max-width: 700px) {
+  body {
+    height: 100%;
+  }
   .cards__bmi-image-result {
     order: 1;
   }
